--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,11 @@ html, body {
   height: 100%;
   margin: 0;
   padding: 0;
+  background-color:black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .intro {
@@ -30,7 +35,55 @@ canvas {
   height: 100%;
 }
 
-.menu {
+nav ul {
+	list-style-type: none;
+	padding: 0;
+}
+
+nav ul li {
+	font-size: 40px;
+	font-family: sans-serif;
+	background-color: black;
+	border: 2px solid black;
+	letter-spacing: 0.1em;
+	/* width: 6em; */
+	height: 1.5em;
+	line-height: 1.5em;
+	position: relative;
+	overflow: hidden;
+	margin: 0.5em;
+	cursor: pointer;
+}
+
+nav ul li span {
+	color: white;
+	mix-blend-mode: difference;
+}
+
+nav ul li::before {
+	content: '';
+	position: absolute;
+	width: 0.5em;
+	height: inherit;
+	background-color: white;
+	border-radius: 50%;
+	top: 0;
+	left: -0.75em;
+	transition: 0.5s ease-out;
+}
+
+nav ul li:hover::before {
+	transform: scale(35.5);
+}
+
+ul.menu {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+/* .menu {
   width: 100%;
   height: 100%;
   background-color: black;
@@ -46,8 +99,8 @@ canvas {
   display: flex;
   justify-content: center;
   align-items: center;
-}
+} */
 
-.menu ul li {
+/* .menu ul li {
   padding: 15px;
-}
+} */
