--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ html, body {
 
 canvas {
   display: none;
-  background-color: black;
+  background: url("../img/background.jpg");
   width: 100%;
   height: 100%;
 }
