--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,10 @@ html, body {
   padding: 0;
 }
 
+body {
+  background: url("../img/background.jpg");
+}
+
 .intro {
   width: 100%;
   height: 100%;
@@ -25,7 +29,6 @@ html, body {
 
 canvas {
   display: none;
-  background: url("../img/background.jpg");
   width: 100%;
   height: 100%;
   object-fit: contain;
