--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,37 @@ canvas {
   height: 100%;
   object-fit: contain;
 }
+#canvas-wrap { position:relative } /* Make this a positioned parent */
+#overlay     { position:absolute; top:20px; left:30px; }
+
+.alignCenter{
+  font-size:100px;
+  color:white;
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.buttonReset{
+  font-size:100px;
+  
+  color:Black;
+  
+  margin: 0;
+  position: absolute;
+  top: 70%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.gameover{
+  width: 100%;
+  top: 0px;
+  height: 100%;
+  background: black;
+  position: fixed;
+  opacity: 0.5;
+}
 
 .menu {
   width: 100%;
