--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
+
+* {
+  font-family: 'VT323', monospace;
+}
+
 html, body {
   width: 100%;
   height: 100%;
@@ -42,7 +48,6 @@ nav ul {
 
 nav ul li {
 	font-size: 40px;
-	font-family: sans-serif;
 	background-color: black;
 	border: 2px solid black;
 	letter-spacing: 0.1em;
