--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,47 @@ body {
   background: url("../img/background.png");
 }
 
+/* Animations */
+
+
+#nave{
+  top: 30%;
+  left: -100px;
+  position: absolute;
+  visibility: hidden;
+  transition: transform,visibility;
+  transition-duration:1s;
+  z-index: 0;
+}
+
+#nave.animate{
+  top: 30%;
+  position: absolute;
+  transform: translateX(780px) rotate(90deg);
+  visibility: visible;
+}
+
+#play, #leaderboardImg, #quitImg{
+  top: 90px;
+  left:-870px;
+  position: relative;
+  visibility: hidden;
+  transition: transform,visibility;
+  transition-duration:1s;
+  z-index: 0;
+}
+
+#play.animate, #leaderboardImg.animate, #quitImg.animate{
+  transform: translateX(780px) rotate(90deg);
+  visibility: visible;
+}
+
+#nave.play{
+  transform: translateX(1035px) translateY(163px) rotate(0deg);
+  visibility: visible;
+}
+
+
 .intro {
   width: 100%;
   height: 100%;
