--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,29 @@ body {
   background: url("../img/background.png");
 }
 
+/* Pop-Up */
+
+
+.pop-up{
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background: url("../img/background.png");
+  color: white;
+  opacity: 1;
+  z-index: 2;
+}
+
+.pop-up div{
+  display: flex;
+  flex-direction: row;
+  gap: 15px;
+}
+
 /* Animations */
 
 
