--- a/css/style.css
+++ b/css/style.css
@@ -122,9 +122,11 @@ canvas {
 }
 
 .game-over {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
-  background-color: black;
   display: none;
   justify-content: center;
   align-items: center;
