Animation to landing page

--- a/css/animations.css
+++ b/css/animations.css
@@ -10,3 +10,64 @@
     top: 0;
     left: -50px;
 }
+
+@keyframes cresent {
+  0% {
+    transform: translate(0px, 0px) scale(0.9);
+    box-shadow: none;
+  }
+  50% {
+    transform: translate(0px, 0px) scale(1.02);
+    box-shadow: 0 0 10px #f9f3f2, 0 0 80px 8px #fff59e;
+    background-color: #fffee9;
+  }
+  100% {
+    transform: translate(0px, -0px) scale(0.9);
+    box-shadow: none;
+  }
+}
+
+.moon {
+  background-image: linear-gradient(30deg, #9b9c9e, #2a2d33);
+  width: 256px;
+  height: 256px;
+  border-radius: 50%;
+  position: absolute;
+  animation: 4s spin linear infinite both;
+}
+.sun {
+  width: 256px;
+  height: 256px;
+  background-color: #f7f4cc;
+  position: absolute;
+  display: block;
+  border-radius: 50%;
+  animation: 5s cresent linear infinite alternate;
+}
+
+/* @media (max-width: 768px) {
+  .moon {
+    width: 160px;
+    height: 160px;
+  }
+} */
+
+@keyframes spin {
+  from {
+    transform: translate(0%, 0%);
+  }
+
+  to {
+    transform: translate(0%, 0%) rotate(360deg);
+  }
+}
+
+#nave-intro{
+  position: absolute;
+  top: 50%;
+  left: -100px;
+  width: 50px;
+  height: 50px;
+  transform: translateY(-50%);
+  z-index: -1;
+}
