--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,60 @@ body {
   gap: 15px;
 }
 
+.user_data {
+  position: relative;
+  padding: 15px 0 0;
+  margin-top: 10px;
+  width: 80%;
+  margin: 1.35em;
+  padding: 10px;
+}
+
+.form_name {
+  width: 100%;
+  border: 0;
+  border-bottom: 2px solid #9b9b9b;
+  outline: 0;
+  font-size: 2rem;
+  color: #fff;
+  padding: 7px 0;
+  background: transparent;
+  transition: border-color 0.2s;
+}
+.form_name::placeholder {
+  color: transparent;
+}
+.form_name:placeholder-shown ~ .label_name {
+  font-size: 3rem;
+  cursor: text;
+  top: 0px;
+}
+
+.label_name {
+  position: absolute;
+  top: 0;
+  display: block;
+  transition: 0.2s;
+  font-size: 1rem;
+  color: #9b9b9b;
+}
+
+.form_name:focus {
+  padding-bottom: 6px;
+  font-weight: 700;
+  border-width: 3px;
+  border-image: linear-gradient(to right, #11998e, #74FAC8);
+  border-image-slice: 1;
+}
+.form_name:focus ~ .label_name {
+  position: absolute;
+  top: 0;
+  display: block;
+  transition: 0.3s;
+  font-size: 1.2rem;
+  color: #74FAC8;
+  font-weight: 700;
+}
 .menu {
   width: 100%;
   height: 100%;
