--- a/css/style.css
+++ b/css/style.css
@@ -54,68 +54,19 @@ body {
   gap: 15px;
 }
 
-.user_data {
-  position: relative;
-  padding: 15px 0 0;
-  margin-top: 10px;
-  width: 80%;
-  margin: 1.35em;
-  padding: 10px;
-}
-
-.form_name {
-  width: 100%;
-  border: 0;
-  border-bottom: 2px solid #9b9b9b;
-  outline: 0;
-  font-size: 2rem;
-  color: #fff;
-  padding: 7px 0;
-  background: transparent;
-  transition: border-color 0.2s;
-}
-.form_name::placeholder {
-  color: transparent;
-}
-.form_name:placeholder-shown ~ .label_name {
-  font-size: 3rem;
-  cursor: text;
-  top: 0px;
-}
-
-.label_name {
-  position: absolute;
-  top: 0;
-  display: block;
-  transition: 0.2s;
-  font-size: 1rem;
-  color: #9b9b9b;
-}
-
-.form_name:focus {
-  padding-bottom: 6px;
-  font-weight: 700;
-  border-width: 3px;
-  border-image: linear-gradient(to right, #11998e, #74FAC8);
-  border-image-slice: 1;
-}
-.form_name:focus ~ .label_name {
-  position: absolute;
-  top: 0;
-  display: block;
-  transition: 0.3s;
-  font-size: 1.2rem;
-  color: #74FAC8;
-  font-weight: 700;
-}
 .menu {
   width: 100%;
   height: 100%;
   display: none;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
 }
 
+.menu p {
+  color: white;
+  font-size: 3.5em;
+}
 
 .menu nav ul {
 	list-style-type: none;
@@ -123,7 +74,7 @@ body {
 }
 
 .menu nav ul li {
-	font-size: 3em;
+	font-size: 2em;
 	height: 1em;
 	position: relative;
 	overflow: hidden;
@@ -151,6 +102,48 @@ body {
 
 .menu nav ul li:hover::before {
 	transform: scale(35.5);
+}
+
+.leaderboard {
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: none;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 25px;
+}
+
+.leaderboard p {
+  font-size: 2em;
+  color: white;
+}
+
+.leaderboard table {
+  color: white;
+  width: 65%;
+  max-width: 700px;
+  height: 500px;
+  text-align: center;
+}
+
+.leaderboard table th {
+  height: 2em;
+  font-size: 1.75em;
+  text-transform: uppercase;
+}
+
+.leaderboard table td {
+  font-size: 1.5em;
+}
+
+.leaderboard table th,
+.leaderboard table td {
+  border: 1px solid white;
 }
 
 canvas {
@@ -264,4 +257,52 @@ button {
   margin: 0;
   font-size: 3em;
   text-align: right;
+}
+
+.username {
+  position: relative;
+  margin: 0.5em;
+  padding: 10px;
+}
+
+.username input {
+  width: 100%;
+  border: 0;
+  outline: 0;
+  border-bottom: 2px solid #9b9b9b;
+  font-size: 2em;
+  color: #fff;
+  background: transparent;
+  transition: border-color 0.2s;
+}
+
+.username input::placeholder {
+  color: transparent;
+}
+
+.username input:placeholder-shown ~ label {
+  font-size: 2em;
+  cursor: text;
+  top: 0px;
+}
+
+.username label {
+  position: absolute;
+  top: -20px;
+  transition: 0.2s;
+  font-size: 1.25em;
+  color: #9b9b9b;
+}
+
+.username input:focus {
+  border-width: 3px;
+  border-image: linear-gradient(to right, #11998e, #74FAC8);
+  border-image-slice: 1;
+}
+.username input:focus ~ label {
+  position: absolute;
+  top: -20px;
+  transition: 0.3s;
+  font-size: 1.25em;
+  color: #74FAC8;
 }
