--- a/css/animations.css
+++ b/css/animations.css
@@ -78,4 +78,4 @@
   0% { transform: translate(0,  0px) rotate(-5deg); }
   33%  { transform: translate(0, -35px) rotate(-3deg); }
   66%   { transform: translate(0, 25px) rotate(3deg); }
-  100%   { transform: translate(0, -0px) rotate(-5deg); }    
+  100%   { transform: translate(0, -0px) rotate(-5deg); } }
